--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_blue">#D5EAFF</color>
     <color name="blue">#2D60DF</color>
     <color name="dark_blue">#3B495A</color>
+    <color name="light_purple">#F7EDFB</color>
 </resources>
