--- a/app/src/main/res/layout/item_expert.xml
+++ b/app/src/main/res/layout/item_expert.xml
@@ -11,7 +11,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:paddingBottom="11dp"
-        android:background="@color/blue">
+        android:background="@color/blue2">
 
         <ImageView
             android:id="@+id/iv_expert_photo"
