--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,7 +37,11 @@
         android:id="@+id/navigation_profile"
         android:name="com.example.ruanghukum.views.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_navigation_profile_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_consultation"
@@ -57,6 +61,28 @@
         android:name="com.example.ruanghukum.views.aiChat.AIChatFragment"
         android:label="fragment_a_i_chat"
         tools:layout="@layout/fragment_a_i_chat" >
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.ruanghukum.views.auth.login.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:popUpTo="@+id/loginFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.ruanghukum.views.auth.register.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@+id/registerFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 
 </navigation>
