--- a/app/src/main/res/layout/fragment_document_prep.xml
+++ b/app/src/main/res/layout/fragment_document_prep.xml
@@ -2,31 +2,45 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/framgent_document_prep_data"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    android:id="@+id/framgent_document_prep_data"
     tools:context=".views.documentPrep.DocumentPrepFragment">
 
-    <ImageButton
-        android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_arrow_back"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/page_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="Siapkan Dokumen"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btn_back"
-        app:layout_constraintStart_toEndOf="@id/btn_back"
-        app:layout_constraintTop_toTopOf="@id/btn_back" />
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_btn_back"
+            android:contentDescription="Back Button"
+            android:paddingVertical="11dp"
+            android:paddingLeft="@dimen/_12sdp"
+            android:paddingRight="@dimen/_7sdp"
+            android:src="@drawable/ic_arrow_back" />
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:id="@+id/page_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Siapkan Dokumen"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 
     <com.google.android.material.search.SearchBar
         android:id="@+id/searchBar"
@@ -35,7 +49,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/page_title">
+        app:layout_constraintTop_toBottomOf="@id/linearLayout">
 
     </com.google.android.material.search.SearchBar>
 
@@ -110,17 +124,17 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/rv_categories_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line1"
         app:spanCount="2"
         tools:itemCount="2"
-        app:layout_constraintTop_toBottomOf="@id/line1"
-        tools:listitem="@layout/item_document_category"/>
+        tools:listitem="@layout/item_document_category" />
 
     <LinearLayout
         android:id="@+id/line2"
@@ -152,17 +166,17 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/rv_categories_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line2"
         app:spanCount="2"
         tools:itemCount="4"
-        app:layout_constraintTop_toBottomOf="@id/line2"
-        tools:listitem="@layout/item_document_category"/>
+        tools:listitem="@layout/item_document_category" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
