--- a/app/src/main/res/layout/fragment_document_prep_preview.xml
+++ b/app/src/main/res/layout/fragment_document_prep_preview.xml
@@ -7,40 +7,54 @@
     android:padding="24dp"
     tools:context=".views.documentPrep.documentPrepPreview.DocumentPrepPreview">
 
-    <ImageButton
-        android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_arrow_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/page_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="Siapkan Dokumen"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btn_back"
-        app:layout_constraintStart_toEndOf="@id/btn_back"
-        app:layout_constraintTop_toTopOf="@id/btn_back" />
-
-    <ImageButton
-        android:id="@+id/btn_download"
-        android:layout_width="@dimen/_17sdp"
-        android:layout_height="@dimen/_17sdp"
-        android:background="@drawable/ic_download"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_btn_back"
+            android:contentDescription="Back Button"
+            android:paddingVertical="11dp"
+            android:paddingLeft="@dimen/_12sdp"
+            android:paddingRight="@dimen/_7sdp"
+            android:src="@drawable/ic_arrow_back" />
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:id="@+id/page_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Siapkan Dokumen"
+            android:fontFamily="@font/work_sans_medium"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:layout_gravity="end|center"
+            android:id="@+id/btn_download"
+            android:layout_width="@dimen/_18sdp"
+            android:layout_height="@dimen/_18sdp"
+            android:background="@drawable/ic_download" />
+
+    </LinearLayout>
+
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/documentPrepBanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/page_title"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
         app:strokeWidth="0dp">
 
         <RelativeLayout
@@ -62,6 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Lorem Ipsum"
+                    android:fontFamily="@font/work_sans_medium"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:maxLines="2"
+                    android:fontFamily="@font/work_sans_reguler"
                     android:text="@string/dummy_text"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +102,10 @@
                 android:layout_height="@dimen/_17sdp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_margin="@dimen/_6sdp"
+                android:layout_marginStart="@dimen/_6sdp"
+                android:layout_marginTop="@dimen/_6sdp"
+                android:layout_marginEnd="@dimen/_6sdp"
+                android:layout_marginBottom="@dimen/_6sdp"
                 android:background="@drawable/ic_share"
                 android:contentDescription="share" />
         </RelativeLayout>
