slicing notif page

--- a/app/src/main/res/layout/fragment_a_i_chat.xml
+++ b/app/src/main/res/layout/fragment_a_i_chat.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="@id/btn_back"
         app:layout_constraintBottom_toBottomOf="@id/btn_back"
         app:layout_constraintStart_toEndOf="@id/btn_back"
-        android:text="Bicara dengan {namaAI}!" />
+        android:text="Bicara dengan Gemini AI!" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ai_chat"
