--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -20,4 +20,99 @@
     <include
         layout="@layout/card_consultation_reminder"/>
 
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/btn_edit_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:strokeWidth="0dp"
+        android:backgroundTint="@color/light_blue"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="12dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="14dp"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:text="Riwayat Konsultasi"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_arrow_forward" />
+        </RelativeLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp">
+
+        <TextView
+            android:id="@+id/tv_section_document"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Dokumen Terbaru"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_see_all_document"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:paddingVertical="0dp"
+            android:paddingHorizontal="0dp"
+            android:textSize="12sp"
+            android:backgroundTint="@color/black"
+            app:layout_constraintTop_toTopOf="@id/tv_section_document"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_section_document"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Lihat Semua"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_document"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_section_document"
+            tools:listitem="@layout/item_document"/>
+
+        <TextView
+            android:id="@+id/tv_empty_document"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:textSize="14sp"
+            android:textColor="@color/text_grey"
+            app:layout_constraintTop_toBottomOf="@id/tv_section_document"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Belum ada dokumen"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_create_document"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_20sdp"
+            android:paddingVertical="0dp"
+            android:paddingHorizontal="12dp"
+            android:textSize="12sp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:backgroundTint="@color/text_grey"
+            app:layout_constraintTop_toBottomOf="@id/tv_empty_document"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Mulai Buat Dokumen"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
