--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -106,6 +106,7 @@
             android:text="Artikel Teratas"/>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_see_all"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:paddingVertical="0dp"
@@ -118,6 +119,7 @@
             android:text="Lihat Semua"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_articles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
