--- a/app/src/main/res/layout/fragment_document_prep_data.xml
+++ b/app/src/main/res/layout/fragment_document_prep_data.xml
@@ -76,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/work_sans_medium"
-                    android:text="Lorem Ipsum"
+                    android:text="Panduan Dokumen"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -90,7 +90,7 @@
                     android:layout_marginTop="6dp"
                     android:fontFamily="@font/work_sans_medium"
                     android:maxLines="2"
-                    android:text="@string/dummy_text"
+                    android:text="@string/title_banner"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
