--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -86,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
+            android:paddingBottom="@dimen/_10sdp"
             app:layout_constraintTop_toBottomOf="@id/tv_section_document"
             tools:listitem="@layout/item_document"/>
 
