--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -23,8 +23,8 @@
             android:background="@drawable/bg_btn_back"
             android:contentDescription="Back Button"
             android:paddingVertical="11dp"
-            android:paddingLeft="@dimen/_12sdp"
-            android:paddingRight="@dimen/_7sdp"
+            android:paddingLeft="12dp"
+            android:paddingRight="7dp"
             android:src="@drawable/ic_arrow_back" />
 
         <TextView
@@ -40,20 +40,24 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_120sdp"
+        android:layout_height="120dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/top_bar"
         android:src="@drawable/baseline_broken_image_24" />
 
-    <TextView
-        android:id="@+id/tv_content"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:textSize="@dimen/_16sdp" />
+        app:layout_constraintTop_toBottomOf="@id/img">
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
